--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   dio: ^3.0.4
   provider: ^3.1.0+1
   flutter_svg: ^0.14.4
+  shimmer: ^1.0.1
 
 dev_dependencies:
   flutter_test:
